# Madness_Simulation

./: .gitignore  2025-march-madness.Rproj  DEVLOG.md  README.Rmd  README.md  pyproject.toml
R/: README.md  run.R  utils.R
R/data/: games.R  schedule.R  scoreboard.R  scoreboard_scrape.R  teams.R  utils.R
R/model/: bracket.R  dev-bracket.R  dev.R  dev_am_i_going_insane.R  dev_iterative_fitting.R  dev_matrix_priors.R  dev_prior_mapping.R  historical.R  model-utils.R  prediction.R  run.R  update.R
R/site/: plot.R  plot.js  table.R  utils.R
bash/: history.bash
data/: README.md
data/games/: bad-games.parquet  games.parquet  mens-2002.parquet  mens-2003.parquet  mens-2004.parquet  mens-2005.parquet  mens-2006.parquet  mens-2007.parquet  mens-2008.parquet  mens-2009.parquet  mens-2010.parquet  mens-2011.parquet  mens-2012.parquet  mens-2013.parquet  mens-2014.parquet  mens-2015.parquet  mens-2016.parquet  mens-2017.parquet  mens-2018.parquet  (+29 more)
history/: README.md  history.R  history.bash
js/: README.md
python/: README.md  images.py
stan/: README.md  bracket.stan  dev_01.stan  dev_02.stan  dev_03.stan  dev_04.stan  dev_05.stan  dev_06.stan  dev_07.stan  dev_08.stan  dev_09.stan  dev_10.stan  dev_11.stan  dev_12.stan  dev_13.stan  dev_14.stan  dev_15.stan  dev_16.stan  dev_17.stan  dev_18.stan  dev_19.stan  dev_20.stan  dev_21.stan  dev_22.stan  dev_23.stan  dev_24.stan  dev_25.stan  dev_26.stan  dev_27.stan  dev_28.stan  dev_29.stan  dev_31.stan  dev_32.stan  dev_33.stan  dev_34.stan  dev_35.stan  dev_37.stan  dev_38.stan  dev_39.stan  dev_40.stan  (+29 more)
(+8881 files in other folders)
