[project]
name = "2025-march-madness"
version = "0.1.0"
description = ""
authors = [
    {name = "markjrieke",email = "markjrieke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "selenium (>=4.29.0,<5.0.0)",
    "polars (>=1.23.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
